--- a/mobile/app.json
+++ b/mobile/app.json
@@ -14,7 +14,10 @@
     },
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.sarjmobile.whisper"
+      "bundleIdentifier": "com.sarjmobile.whisper",
+      "infoPlist": {
+        "ITSAppUsesNonExemptEncryption": false
+      }
     },
     "android": {
       "adaptiveIcon": {
